# Model-Predictive-Control-for-Linear-Systems-in-Cpp-by-Using-Eigen-Library

./: README.md
can_compile_run/: CMakeLists.txt  ModelPredictiveController.h  driver_code.cpp  readme.md
